[metadata]
name = rss_plotting_CarlMears
version = 0.2.0
author_email = mears@remss.com
description = various python plotting routines useful at RSS
long_description = file: README.md
long_description_content_type = text/markdown
url = http://gitlab.remss.com/Carl/plotting
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License v3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
	numpy
	xarray
	scipy
	cartopy
	netCDF4

[options.packages.find]
where = src

